Ensure text inside inputs remains legible when editing row

--- a/src/posting/posting.scss
+++ b/src/posting/posting.scss
@@ -495,6 +495,7 @@ KeyValueEditor {
             background: $accent;
         }
         Input {
+          color: $text;
           background: $accent 10%;
         }
     }
